about us and contact us page added

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - Travel Recommendations</title>
-  
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-  integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../style.css">
 </head>
 
@@ -33,6 +33,71 @@
       <div class="search"></div>
     </nav>
   </header>
+  <section class="homepage-details aboutus-details">
+    <aside>
+      <div class="hr-line"></div>
+      <div class="social-icons">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-youtube"></i>
+      </div>
+    </aside>
+    <div class="about-us">
+      <h1>About Us</h1>
+      <div class="about-us-details">
+        <p>Welcome to Our Company! We are a team of passionate individuals dedicated to providing excellent
+          services/products to our customers. Our mission is to provide the best experience for people traveling to
+          different destinations around the world.</p>
+        <p>Our values include integrity, innovation, customer satisfaction, and teamwork. We believe In putting our
+          customers first and working together to achieve our goals</p>
+        <p>Feel free to explore our website to learn more about what we offer!</p>
+      </div>
+      <div class="our-team">
+        <h1>Our Team</h1>
+        <div class="card">
+          <div class="card-icon">
+            <i class="fa-solid fa-user-tie"></i>
+          </div>
+          <div class="card-text">
+            <h2>John Doe</h2>
+            <p>John is responsibe for...</p>
+            <h3>CEO</h3>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-icon">
+            <i class="fa-solid fa-user-tie"></i>
+          </div>
+          <div class="card-text">
+            <h2>Celina Thomas</h2>
+            <p>Celina Thomas is responsibe for...</p>
+            <h3>Team Lead</h3>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-icon">
+            <i class="fa-solid fa-user-tie"></i>
+          </div>
+          <div class="card-text">
+            <h2>Mike Tysen</h2>
+            <p>Mike Tysen is responsibe for...</p>
+            <h3>Delivery Head</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- <section>
+    <div class="about-us">
+      <p>Welcome to Our Company! We are a team of passionate individuals dedicated to providing excellent
+        services/products to our customers. Our mission is to provide the best experience for people traveling to
+        different destinations around the world.</p>
+      <p>Our values include integrity, innovation, customer satisfaction, and teamwork. We believe In putting our
+        customers first and working together to achieve our goals</p>
+      <p>Feel free to explore our website to learn more about what we offer!</p>
+    </div>
+  </section> -->
 </body>
 
 </html>
