--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us - Travel Recommendations</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-  integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../style.css">
 </head>
 
@@ -32,6 +32,35 @@
       <div class="search"></div>
     </nav>
   </header>
+  <section class="homepage-details contactus-details">
+    <aside>
+      <div class="hr-line"></div>
+      <div class="social-icons">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-youtube"></i>
+      </div>
+    </aside>
+    <div class="contact-us-details">
+      <div class="contact-us-text">
+        <h1>Contact Us</h1>
+        <p>Get in touch</p>
+      </div>
+      <div class="contact-us-form">
+        <form>
+          <label for="name">Name</label>
+          <input type="text" id="name" placeholder="Enter your name">
+          <label for="email">Email</label>
+          <input type="email" id="email" placeholder="Enter your email">
+          <label for="message">Message</label>
+          <textarea name="message" id="message" minlength="5" maxlength="500"
+            placeholder="Enter your message"></textarea>
+          <p class="btn" onclick="(e)=>e.preventDefault()">Submit</p>
+        </form>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
